# Resume-buliding

./: .gitignore  main.py  pyproject.toml  requirement.txt
Resume/: .env  index.html  package-lock.json  package.json  vite.config.js
Resume/src/: App.css  App.jsx  index.css  main.jsx
Resume/src/Components/: Allcall.jsx  Profile.jsx
Resume/src/Components/Accounts/: Login.css  Login.jsx  Otpverify.jsx  SignUp.jsx
Resume/src/Components/In-Floders/: ContentPage.jsx  Navbar.jsx  RightBar.jsx  SearchPage.jsx  SideBar.jsx
Resume/src/ReduxToolkit/: RtkApi.jsx  Store.jsx
Resume/src/ReduxToolkit/Reducers/: ConversationMSG.jsx  Inputsending.jsx
Resume/src/ReduxToolkit/Reducers/Account-authentication/: GetUserDetails.jsx  LoginReducer.jsx  SignupReducer.jsx  VerifyOtp.jsx
filter/: db.sqlite3
filter/fapplication/: Serializers.py  admin.py  apps.py  models.py  testing.txt  urls.py  views.py
filter/fapplication/LangchainUser/Agents/: BaeAgent.py  Imagegen.py  Resume.py  Translator.py  VoiceAgent.py
filter/fapplication/LangchainUser/MainGraph/: Graphing.py  Workflow.py
filter/fapplication/migrations/: 0001_initial.py  0002_customuser_purpose.py  0003_remove_customuser_max_try_out_remove_customuser_otp_and_more.py  0004_customuser_first_name_customuser_last_name.py
filter/filter/: asgi.py  settings.py  urls.py  wsgi.py
